@@ -1,3 +1,7 @@
+2007-02-15  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/mio_tls.cc: new TLS configuration syntax
+
 2007-02-13  Matthias Wimmer  <m@tthias.eu>
 
     * jsm/util.cc: updated memory management
